[package]
name = "reaction"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
rusqlite = { version = "0.33", features = ["bundled"] }
unic-emoji-char = "0.9"
sha2 = "0.10"
