[package]
name = "reaction"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/sorokya/reaction"
description = "A Simple Emoji Reaction API"
authors = ["Richard Leek <richard@richardleek.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
rusqlite = { version = "0.33", features = ["bundled"] }
unic-emoji-char = "0.9"
sha2 = "0.10"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
